[gd_scene load_steps=21 format=3 uid="uid://dlbbnag8ikm5e"]

[ext_resource type="Script" path="res://scenes/computer/player.gd" id="1_c3fr3"]
[ext_resource type="Texture2D" uid="uid://dxyk5rvqdgcdh" path="res://assets/emojies/emoji2.png" id="2_g3we0"]
[ext_resource type="Shader" path="res://shaders/effects/blink.gdshader" id="2_nsoew"]
[ext_resource type="Texture2D" uid="uid://baovpvhbe2y06" path="res://assets/progress_bar/CircularProgressBar.png" id="4_rbxkf"]
[ext_resource type="Texture2D" uid="uid://8e8qqprr1gqj" path="res://assets/progress_bar/HeartProgressBar.png" id="4_uafb5"]
[ext_resource type="Script" path="res://components/collision/2d/hurtbox.gd" id="6_20d5t"]
[ext_resource type="Script" path="res://addons/health_component/health_component.gd" id="8_2vufd"]
[ext_resource type="Script" path="res://addons/finite-state-machine/finite-state-machine.gd" id="9_l8f28"]
[ext_resource type="Script" path="res://components/movement/motion_component.gd" id="10_nkwac"]
[ext_resource type="Script" path="res://scenes/computer/states/player/idle.gd" id="10_wwsee"]
[ext_resource type="Script" path="res://scenes/computer/states/player/run.gd" id="13_cif2g"]

[sub_resource type="Animation" id="Animation_28wps"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_415kr"]
resource_name = "hit"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_opacity")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_120n0"]
_data = {
"RESET": SubResource("Animation_28wps"),
"hit": SubResource("Animation_415kr")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pfce7"]
shader = ExtResource("2_nsoew")
shader_parameter/flash_opacity = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_yls2h"]
atlas = ExtResource("2_g3we0")
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqyv0"]
atlas = ExtResource("2_g3we0")
region = Rect2(48, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wgqdo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yls2h")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqyv0")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ehnfc"]
radius = 13.0384

[sub_resource type="CircleShape2D" id="CircleShape2D_8xxhx"]
radius = 13.0384

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 4
script = ExtResource("1_c3fr3")

[node name="HealthFeedback" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = -27.0
offset_right = 1.0
offset_bottom = -27.0

[node name="HealthBar" type="TextureProgressBar" parent="HealthFeedback"]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 301.0
offset_bottom = 264.0
scale = Vector2(0.05, 0.05)
max_value = 3.0
value = 2.0
texture_under = ExtResource("4_uafb5")
texture_progress = ExtResource("4_uafb5")
tint_under = Color(0.447059, 0.447059, 0.447059, 1)
tint_progress = Color(0.258824, 0.956863, 0.137255, 1)

[node name="TeleportCooldown" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -15.0
offset_top = -28.0
offset_right = -15.0
offset_bottom = -28.0

[node name="TeleportCooldownBar" type="TextureProgressBar" parent="TeleportCooldown"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -2.0
offset_top = -1.0
offset_right = 298.0
offset_bottom = 299.0
scale = Vector2(0.05, 0.05)
max_value = 1.0
step = 0.001
value = 0.05
fill_mode = 4
texture_under = ExtResource("4_rbxkf")
texture_progress = ExtResource("4_rbxkf")
tint_progress = Color(0.164706, 0.843137, 0.341176, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_120n0")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_pfce7")
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_wgqdo")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ehnfc")

[node name="WallTeleportDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, 30)

[node name="Hurtbox2D" type="Area2D" parent="."]
priority = 1
script = ExtResource("6_20d5t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox2D"]
shape = SubResource("CircleShape2D_8xxhx")
debug_color = Color(0.847059, 0.298039, 0.141176, 0.419608)

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("8_2vufd")
MAX_HEALTH = 3
CURRENT_HEALTH = 3

[node name="MotionComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("10_nkwac")
actor = NodePath("..")
max_speed = 300.0
acceleration = 0.0
friction = 0.0

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("actor", "current_state")]
script = ExtResource("9_l8f28")
actor = NodePath("..")
current_state = NodePath("Ground/Idle")
flush_stack_when_reach_capacity = true

[node name="Ground" type="Node" parent="FiniteStateMachine"]

[node name="Idle" type="Node" parent="FiniteStateMachine/Ground" node_paths=PackedStringArray("animated_sprite", "motion_component")]
script = ExtResource("10_wwsee")
animated_sprite = NodePath("../../../AnimatedSprite2D")
motion_component = NodePath("../../../MotionComponent")

[node name="Run" type="Node" parent="FiniteStateMachine/Ground" node_paths=PackedStringArray("wall_teleport_detector", "animated_sprite", "motion_component")]
script = ExtResource("13_cif2g")
wall_teleport_detector = NodePath("../../../WallTeleportDetector")
animated_sprite = NodePath("../../../AnimatedSprite2D")
motion_component = NodePath("../../../MotionComponent")

[connection signal="hitbox_detected" from="Hurtbox2D" to="." method="_on_hurtbox_2d_hitbox_detected"]
